--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,8 @@ theme = "hugo-scroll"
 # The "title" of your website
 title = "MATRIXDIODE"
 
+googleAnalytics = "G-GQL70HMFFS"
+
 [params]
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Markdown is supported in here as well. So you may e.g. add a link to your legal imprint-page.
