--- a/config.toml
+++ b/config.toml
@@ -12,8 +12,6 @@ theme = "hugo-scroll"
 # The "title" of your website
 title = "MATRIXDIODE"
 
-googleAnalytics = "G-GQL70HMFFS"
-
 [params]
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Markdown is supported in here as well. So you may e.g. add a link to your legal imprint-page.
@@ -37,3 +35,8 @@ googleAnalytics = "G-GQL70HMFFS"
 
     #[params.meta]
     #    keywords = "some, keywords, for, seo, you, know, google, duckduckgo, and, such"
+
+    # Google Analytics 4
+    googleAnalyticsID = "G-GQL70HMFFS"
+
+
