--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,6 @@ googleAnalytics = "UA-228100391-1"
     #    keywords = "some, keywords, for, seo, you, know, google, duckduckgo, and, such"
 
     # Google Analytics 4
-    googleAnalyticsID = "G-GQL70HMFFS"
+    googleAnalyticsID = "G-XJ9RHFH018"
 
 
